--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="../build/Game.js"></script>
+    <link rel="stylesheet" href="../src/css/style.css">
+    <script src="../build/app.js"></script>
+    <script>
+        window.addEventListener("DOMContentLoaded", () => {
+            const WIDTH = 800, HEIGHT = 600;
+
+            let canvas = document.createElement("canvas");
+            let canvasContainer = document.getElementById("canvasContainer")
+
+            canvas.width = WIDTH;
+            canvas.height = HEIGHT;
+            canvas.style.border = "1px solid black";
+            canvas.oncontextmenu = () => false;
+
+            canvasContainer.appendChild(canvas);
+
+            let gameController = new GameController({x: WIDTH, y: HEIGHT}, canvas);
+        })
+    </script>
 </head>
+
 <body>
-<button id="totalButton"
-        onclick="displayTotalPerPerson('Tom Foolery', 15)">See Total</button>
-<div><span id="totalMessage"></span></div>
+
+<div class="main-container">
+    <div class="title">
+        <h1 style="font-size:48px;">Powder Game</h1>
+    </div>
+    <div class="sub-heading">
+        <h2>Lucas Webb and Will Kanter</h2>
+    </div>
+
+    <div class="description">
+        <p>Use your cursor to place pixels on the map....</p>
+    </div>
+</div>
+
+<div id="canvasContainer"></div>
 </body>
 </html>
