Got buttons somewhat working
Added explosion to mess around, but found out I would need a ToolType enum and tooltip singleton.

--- a/src/index.html
+++ b/src/index.html
@@ -39,5 +39,17 @@
 </div>
 
 <div id="canvasContainer"></div>
+<div id="tool-pallette">
+    <div id="particle-classes">
+        <h1>Powders</h1>
+        <button class="particle">Stone</button>
+        <button class="particle">Sand</button>
+    </div>
+    
+    <div id="tool-classes">
+        <h1>Tools</h1>
+        <button class="tool">Eraser</button>
+    </div>
+</div>
 </body>
 </html>
