mouse position being tracked in console
mouse can now be tracked on clicks

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,9 @@
     </div>
 </div>
 
-<div id="canvasContainer"></div>
+<div id="canvasContainer">
+    
+</div>
 <div id="tool-pallette">
     <div id="particle-classes">
         <h1>Powders</h1>
