--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,9 @@
     <div class="description">
         <p>Use your cursor to place pixels on the map....</p>
     </div>
+    <div class="gameControls">
+        <button class="pause">Pause</button>
+    </div>
 </div>
 
 <div id="canvasContainer">
@@ -46,11 +49,13 @@
         <h1>Powders</h1>
         <button class="particle">Stone</button>
         <button class="particle">Sand</button>
+        <button class="particle">Water</button>
     </div>
     
     <div id="tool-classes">
         <h1>Tools</h1>
         <button class="tool">Eraser</button>
+        <button class="tool">Wall</button>
     </div>
 </div>
 </body>
