--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
             const WIDTH = 800, HEIGHT = 600;
 
             let canvas = document.createElement("canvas");
-            let canvasContainer = document.getElementById("canvasContainer")
+            let canvasContainer = document.getElementById("canvasContainer");
 
             canvas.width = WIDTH;
             canvas.height = HEIGHT;
@@ -20,64 +20,41 @@
 
             let gameController = new GameController({x: WIDTH, y: HEIGHT}, canvas);
         })
-
-        function resetFunction(){
-            const WIDTH = 800, HEIGHT = 600;
-            let canvas = document.createElement("canvas");
-            let canvasContainer = document.getElementById("canvasContainer");
-            canvasContainer.children[0].remove();
-
-            canvas.width = WIDTH;
-            canvas.height = HEIGHT;
-            canvas.style.border = "1px solid black";
-            canvas.oncontextmenu = () => false;
-
-            canvasContainer.appendChild(canvas);
-
-            let gameController = new GameController({x: WIDTH, y: HEIGHT}, canvas);
-        }
     </script>
 </head>
 
 <body>
-
-<div class="main-container">
-    <div class="title">
+    <div id="side-container">
         <h1 style="font-size:48px;">Powder Game</h1>
-    </div>
-    <div class="sub-heading">
-        <h2>Lucas Webb and Will Kanter</h2>
-    </div>
+        <h2 style="font-size:18px;">Lucas Webb and Will Kanter</h2>
 
-    <div class="description">
-        <p>Use your cursor to place pixels on the map....</p>
-    </div>
-    <div class="gameControls">
-        <button class="pause">Pause</button>
-        <button class="reset" onclick="resetFunction()">Reset</button>
-    </div>
+        <div class="description">
+            <p>Use your cursor to place pixels on the map....</p>
+        </div>
 
-    <div class="main-box">
-        <div id="canvasContainer"></div>
-        
+        <div id="gameControls">
+            <button class="pause_button">Pause</button>
+            <button class="reset_button">Reset</button>
+        </div>
 
-        <div id="tool-pallette" style="margin: inherit;padding: 20px;">
-            <div id="particle-classes">
-                <h1>Powders</h1>
-                <button class="particle">Stone</button>
-                <button class="particle">Sand</button>
-                <button class="particle">Water</button>
-                <button class="particle">Dirt</button>
-                <button class="particle">Oil</button>
-            </div>
-            
-            <div id="tool-classes">
+        <div id="tool-box">
+            <div id="tools">
                 <h1>Tools</h1>
-                <button class="tool">Eraser</button>
-                <button class="tool">Wall</button>
+                <button class="inactive">Eraser</button>
+                <button class="inactive">Wall</button>
+            </div>
+
+            <div id="particles">
+                <h1>Particles</h1>
+                <button class="active">Stone</button>
+                <button class="inactive">Sand</button>
+                <button class="inactive">Water</button>
+                <button class="inactive">Dirt</button>
+                <button class="inactive">Oil</button>
             </div>
         </div>
     </div>
-</div>
+
+    <div id="canvasContainer"></div>
 </body>
 </html>
